Sun Aug 12 01:27:51 2001  Steve Huston  <shuston@riverace.com>

        * tests/Log_Msg_Test.cpp: Correct const-ness of a pointer
          retrieved from ACE_Log_Record::msg_data().

Sun Aug 12 00:34:42 2001  Steve Huston  <shuston@riverace.com>

        * ace/Log_Record.h:
        * ace/Log_Record.i (msg_data()): Changed ACE_TCHAR *msg_data()
          to:  const ACE_TCHAR *msg_data (void) const. Makes it safer,
          and conforms to all current usage inside ACE. Also makes
          C++ Network Programming examples simpler :-)

Fri Aug 10 19:39:48 2001  Krishnakumar B  <kitty@cs.wustl.edu>

        * bin/auto_run_tests.lst:

          Disabled the Blocking_Sync_None test from running under Tru64.
          Also changed the config parameter passed to the auto_compile
          script from TRU_64 to Tru64 in
               ~bugzilla/bin/auto_compile_tru64_cxx.

          This is so that the test is disabled only for the WashU builds.
          The reason being that Bala was not too happy with changing the
          default values for all the platforms and we also wanted to avoid
          more #ifdefs in the code. Other builds might have better values
          and the test might succeed. Have to confirm this though.

Fri Aug 10 17:59:47 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/Svc_Conf_y.cpp:
        * ace/OS.h: Added /**/ between #include and <sys/modem.h> and
          <alloca.h> to avoid warning from CE compiler.

        * ace/ace_dll.vcp: Added Svc_Conf_Lexer_Guard.* to the project.

Fri Aug 10 13:40:46 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/nightlybuilds/builds.lst:

          I didn't realize the LIST definition was needed.  I have
          added it for the Tru64 4.0f Compaq C++ 6.3-10 build.

Fri Aug 10 11:45:03 2001  Chad Elliott  <elliott_c@ociweb.com>

        * bin/nightlybuilds/builds.lst:

          Added the Tru64 4.0f Compaq C++ 6.3-10 build.

Fri Aug 10 11:06:23 2001  Chad Elliott  <elliott_c@ociweb.com>
