@@ -108,10 +108,10 @@ ACE_MEM_Connector::connect (ACE_MEM_Stream &new_stream,
                       -1);
 
     // If either side don't support MT, we will not use it.
-#if defined (ACE_WIN32) || defined (ACE_HAS_POSIX_SEM) || defined (ACE_PSOS)
+#if defined (ACE_WIN32) || !defined (_ACE_USE_SV_SEM)
   if (! (this->preferred_strategy_ == ACE_MEM_IO::MT &&
          server_strategy == ACE_MEM_IO::MT))
-#endif /* ACE_WIN32 || ACE_HAS_POSIX_SEM || ACE_PSOS */
+#endif /* ACE_WIN32 || !_ACE_USE_SV_SEM */
     server_strategy = ACE_MEM_IO::Reactive;
 
   if (ACE::send (new_handle, &server_strategy,
